salesforce-main/src/main/default/objects/Application_wizard__c/Application_wizard__c.object-meta.xml
<CustomObject>
    <description>this contains the data acquired by the application wizard controller and pages</description>
    <label>Application wizard</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application wizards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>