salesforce-main/src/main/default/objects/Application_wizard__c/fields/Academic_date_expected__c.field-meta.xml
<CustomField>
    <fullName>Academic_date_expected__c</fullName>
    <label>Academic date expected</label>
    <type>Date</type>
</CustomField>