salesforce-main/src/main/default/objects/Application_wizard__c/fields/Academic_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Academic_File_Name__c</fullName>
    <label>Academic File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>