salesforce-main/src/main/default/objects/Application_wizard__c/fields/Academic_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Academic_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academic uploaded</label>
    <type>Checkbox</type>
</CustomField>