salesforce-main/src/main/default/objects/Application_wizard__c/fields/ACCA_card_uploaded__c.field-meta.xml
<CustomField>
    <fullName>ACCA_card_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACCA card uploaded</label>
    <type>Checkbox</type>
</CustomField>