salesforce-main/src/main/default/objects/Application_wizard__c/fields/ACCA_date_expected__c.field-meta.xml
<CustomField>
    <fullName>ACCA_date_expected__c</fullName>
    <label>ACCA date expected</label>
    <type>Date</type>
</CustomField>