salesforce-main/src/main/default/objects/Application_wizard__c/fields/ACCA_File_Name__c.field-meta.xml
<CustomField>
    <fullName>ACCA_File_Name__c</fullName>
    <label>ACCA File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>