salesforce-main/src/main/default/objects/Application_wizard__c/fields/Additional_Doc_2_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_Doc_2_Description__c</fullName>
    <label>Additional Doc 2 Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>