salesforce-main/src/main/default/objects/Application_wizard__c/fields/Additional_Doc_3_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Doc_3_File_Name__c</fullName>
    <label>Additional Doc 3 File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>