salesforce-main/src/main/default/objects/Application_wizard__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Correspondence Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>