salesforce-main/src/main/default/objects/Application_wizard__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <label>Address Line 3</label>
    <length>250</length>
    <type>Text</type>
</CustomField>