salesforce-main/src/main/default/objects/Application_wizard__c/fields/Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income__c</fullName>
    <label>Annual Income</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>