salesforce-main/src/main/default/objects/Application_wizard__c/fields/Any_close_relatives_in_UK__c.field-meta.xml
<CustomField>
    <fullName>Any_close_relatives_in_UK__c</fullName>
    <label>Any close relatives in UK</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>