salesforce-main/src/main/default/objects/Application_wizard__c/fields/Any_criminal_convictions__c.field-meta.xml
<CustomField>
    <fullName>Any_criminal_convictions__c</fullName>
    <label>Any criminal convictions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>