salesforce-main/src/main/default/objects/Application_wizard__c/fields/Any_Learning_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Any_Learning_Requirements__c</fullName>
    <label>Any Learning Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>