salesforce-main/src/main/default/objects/Application_wizard__c/fields/App_Wiz_Student_Type__c.field-meta.xml
<CustomField>
    <fullName>App_Wiz_Student_Type__c</fullName>
    <description>This fields sets whether the account is domestic or international after the personal details are entered.</description>
    <inlineHelpText>Created for mapping check list page correctly</inlineHelpText>
    <label>App Wiz Student Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>