salesforce-main/src/main/default/objects/Application_wizard__c/fields/Applied_fro_Student_Visa_before__c.field-meta.xml
<CustomField>
    <fullName>Applied_fro_Student_Visa_before__c</fullName>
    <label>Applied fro Student Visa before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>