salesforce-main/src/main/default/objects/Application_wizard__c/fields/Applied_to_Other_Universities__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Other_Universities__c</fullName>
    <label>Applied to Other Universities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>