salesforce-main/src/main/default/objects/Application_wizard__c/fields/Are_you_currently_in_Uk_with_a_visa__c.field-meta.xml
<CustomField>
    <fullName>Are_you_currently_in_Uk_with_a_visa__c</fullName>
    <label>Are you currently in Uk with a visa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>