salesforce-main/src/main/default/objects/Application_wizard__c/fields/Are_yu_being_sponsored_for_the_programme__c.field-meta.xml
<CustomField>
    <fullName>Are_yu_being_sponsored_for_the_programme__c</fullName>
    <label>Are yu being sponsored for the programme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>