salesforce-main/src/main/default/objects/Application_wizard__c/fields/Attendance_date_expected__c.field-meta.xml
<CustomField>
    <fullName>Attendance_date_expected__c</fullName>
    <label>Attendance date expected</label>
    <type>Date</type>
</CustomField>