salesforce-main/src/main/default/objects/Application_wizard__c/fields/Attendance_record_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Attendance_record_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance record uploaded</label>
    <type>Checkbox</type>
</CustomField>