salesforce-main/src/main/default/objects/Application_wizard__c/fields/Attendence_Record_file_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendence_Record_file_Name__c</fullName>
    <label>Attendence Record file Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>