salesforce-main/src/main/default/objects/Application_wizard__c/fields/Authorising_name__c.field-meta.xml
<CustomField>
    <fullName>Authorising_name__c</fullName>
    <label>Authorising name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>