salesforce-main/src/main/default/objects/Application_wizard__c/fields/bringing_dependents__c.field-meta.xml
<CustomField>
    <fullName>bringing_dependents__c</fullName>
    <label>Bringing Dependents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>