salesforce-main/src/main/default/objects/Application_wizard__c/fields/Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash__c</fullName>
    <label>Cash</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>