salesforce-main/src/main/default/objects/Application_wizard__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>applicants city</description>
    <label>Correspondence City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>