salesforce-main/src/main/default/objects/Application_wizard__c/fields/Conditions_of_residency__c.field-meta.xml
<CustomField>
    <fullName>Conditions_of_residency__c</fullName>
    <label>Conditions of residency</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>