salesforce-main/src/main/default/objects/Application_wizard__c/fields/Correct_Information__c.field-meta.xml
<CustomField>
    <fullName>Correct_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correct Information</label>
    <type>Checkbox</type>
</CustomField>