salesforce-main/src/main/default/objects/Application_wizard__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correspondence Country</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Application wizards</relationshipLabel>
    <relationshipName>Application_wizards</relationshipName>
    <type>Lookup</type>
</CustomField>