salesforce-main/src/main/default/objects/Application_wizard__c/fields/Country_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Country_of_birth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of birth</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Application wizards (Country of birth)</relationshipLabel>
    <relationshipName>Application_wizards2</relationshipName>
    <type>Lookup</type>
</CustomField>