salesforce-main/src/main/default/objects/Application_wizard__c/fields/Country_of_Domicile_Permanent_Residency__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Domicile_Permanent_Residency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Domicile/Permanent Residency</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Application wizards (Country of Domicile/Permanent Residency)</relationshipLabel>
    <relationshipName>Application_wizards3</relationshipName>
    <type>Lookup</type>
</CustomField>