salesforce-main/src/main/default/objects/Application_wizard__c/fields/Course_Details_Complete__c.field-meta.xml
<CustomField>
    <fullName>Course_Details_Complete__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Course Details Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>