salesforce-main/src/main/default/objects/Application_wizard__c/fields/Course_Instance__c.field-meta.xml
<CustomField>
    <fullName>Course_Instance__c</fullName>
    <formula>Web_Course_Offering__r.Course_Instance_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Instance</label>
    <type>Text</type>
</CustomField>