salesforce-main/src/main/default/objects/Application_wizard__c/fields/Course_Section_Complete__c.field-meta.xml
<CustomField>
    <fullName>Course_Section_Complete__c</fullName>
    <label>Course Section Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>