salesforce-main/src/main/default/objects/Application_wizard__c/fields/course_year__c.field-meta.xml
<CustomField>
    <fullName>course_year__c</fullName>
    <label>course year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>