salesforce-main/src/main/default/objects/Application_wizard__c/fields/Current_course_in_UK__c.field-meta.xml
<CustomField>
    <fullName>Current_course_in_UK__c</fullName>
    <label>Current course in UK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>