salesforce-main/src/main/default/objects/Application_wizard__c/fields/Current_Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Visa_Type__c</fullName>
    <label>Current Visa Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
            <value>
                <fullName>PBS Dependent</fullName>
            </value>
            <value>
                <fullName>Humanitarian Description</fullName>
            </value>
            <value>
                <fullName>Discretionary Leave</fullName>
            </value>
            <value>
                <fullName>Student Visitor</fullName>
            </value>
            <value>
                <fullName>General Visitor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>