salesforce-main/src/main/default/objects/Application_wizard__c/fields/Date_of_arrival_in_the_UK__c.field-meta.xml
<CustomField>
    <fullName>Date_of_arrival_in_the_UK__c</fullName>
    <label>Date of arrival in the UK</label>
    <type>Date</type>
</CustomField>