salesforce-main/src/main/default/objects/Application_wizard__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>date of birth of the applicant</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>