salesforce-main/src/main/default/objects/Application_wizard__c/fields/Date_of_Residency__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Residency__c</fullName>
    <label>Date of Residency</label>
    <type>Date</type>
</CustomField>