salesforce-main/src/main/default/objects/Application_wizard__c/fields/Do_you_have_indefinite_leave__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_indefinite_leave__c</fullName>
    <label>Do you have indefinite leave</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>