salesforce-main/src/main/default/objects/Application_wizard__c/fields/Domicile__c.field-meta.xml
<CustomField>
    <fullName>Domicile__c</fullName>
    <label>Domicile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AD~ Andorra</fullName>
            </value>
            <value>
                <fullName>AE~ United Arab Emirates</fullName>
            </value>
            <value>
                <fullName>AF~ Afghanistan</fullName>
            </value>
            <value>
                <fullName>AG~ Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>AI~ Anguilla</fullName>
            </value>
            <value>
                <fullName>AL~ Albania</fullName>
            </value>
            <value>
                <fullName>AM~ Armenia</fullName>
            </value>
            <value>
                <fullName>AN~ Netherlands Antilles</fullName>
            </value>
            <value>
                <fullName>AO~ Angola</fullName>
            </value>
            <value>
                <fullName>AR~ Argentina</fullName>
            </value>
            <value>
                <fullName>AS~ American Samoa</fullName>
            </value>
            <value>
                <fullName>AT~ Austria</fullName>
            </value>
            <value>
                <fullName>AU~ Australia</fullName>
            </value>
            <value>
                <fullName>AW~ Aruba</fullName>
            </value>
            <value>
                <fullName>AX~ Åland Islands {Ahvenamaa}</fullName>
            </value>
            <value>
                <fullName>AZ~ Azerbaijan</fullName>
            </value>
            <value>
                <fullName>BA~ Bosnia and Herzegovina</fullName>
            </value>
            <value>
                <fullName>BB~ Barbados</fullName>
            </value>
            <value>
                <fullName>BD~ Bangladesh</fullName>
            </value>
            <value>
                <fullName>BE~ Belgium</fullName>
            </value>
            <value>
                <fullName>BF~ Burkina [Burkina Faso]</fullName>
            </value>
            <value>
                <fullName>BG~ Bulgaria</fullName>
            </value>
            <value>
                <fullName>BH~ Bahrain</fullName>
            </value>
            <value>
                <fullName>BI~ Burundi</fullName>
            </value>
            <value>
                <fullName>BJ~ Benin</fullName>
            </value>
            <value>
                <fullName>BL~ St Barthélemy</fullName>
            </value>
            <value>
                <fullName>BM~ Bermuda</fullName>
            </value>
            <value>
                <fullName>BN~ Brunei [Brunei Darussalam]</fullName>
            </value>
            <value>
                <fullName>BO~ Bolivia</fullName>
            </value>
            <value>
                <fullName>BQ~ Bonaire, Sint Eustatius and Saba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>