salesforce-main/src/main/default/objects/Application_wizard__c/fields/Duration_of_stay_with_relatives__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_stay_with_relatives__c</fullName>
    <label>Duration of stay with relatives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>