salesforce-main/src/main/default/objects/Application_wizard__c/fields/EEA_citizen__c.field-meta.xml
<CustomField>
    <fullName>EEA_citizen__c</fullName>
    <label>Are you a citizen of the EEA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>