salesforce-main/src/main/default/objects/Application_wizard__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>applicant email address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>