salesforce-main/src/main/default/objects/Application_wizard__c/fields/Email_mrkgting__c.field-meta.xml
<CustomField>
    <fullName>Email_mrkgting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email mrkgting</label>
    <type>Checkbox</type>
</CustomField>