salesforce-main/src/main/default/objects/Application_wizard__c/fields/Eng_Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Eng_Exam_Date__c</fullName>
    <label>Eng Exam Date</label>
    <type>Date</type>
</CustomField>