salesforce-main/src/main/default/objects/Application_wizard__c/fields/Eng_exam_result__c.field-meta.xml
<CustomField>
    <fullName>Eng_exam_result__c</fullName>
    <label>Eng_exam result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>