salesforce-main/src/main/default/objects/Application_wizard__c/fields/Eng_exam_type__c.field-meta.xml
<CustomField>
    <fullName>Eng_exam_type__c</fullName>
    <label>Eng exam type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IELTS</fullName>
            </value>
            <value>
                <fullName>TOEFL</fullName>
            </value>
            <value>
                <fullName>PTE (Pearsons Test)</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>