salesforce-main/src/main/default/objects/Application_wizard__c/fields/Eng_exam_type_other__c.field-meta.xml
<CustomField>
    <fullName>Eng_exam_type_other__c</fullName>
    <label>Eng exam type other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>