salesforce-main/src/main/default/objects/Application_wizard__c/fields/English_date_expected__c.field-meta.xml
<CustomField>
    <fullName>English_date_expected__c</fullName>
    <label>English date expected</label>
    <type>Date</type>
</CustomField>