salesforce-main/src/main/default/objects/Application_wizard__c/fields/English_Lang_File_Name__c.field-meta.xml
<CustomField>
    <fullName>English_Lang_File_Name__c</fullName>
    <label>English Lang File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>