salesforce-main/src/main/default/objects/Application_wizard__c/fields/English_Test_uploaded__c.field-meta.xml
<CustomField>
    <fullName>English_Test_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>English Test uploaded</label>
    <type>Checkbox</type>
</CustomField>