salesforce-main/src/main/default/objects/Application_wizard__c/fields/Ever_studied_in_UK_before__c.field-meta.xml
<CustomField>
    <fullName>Ever_studied_in_UK_before__c</fullName>
    <label>Ever studied in UK before</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>