salesforce-main/src/main/default/objects/Application_wizard__c/fields/Exam_type__c.field-meta.xml
<CustomField>
    <fullName>Exam_type__c</fullName>
    <label>Exam type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>