salesforce-main/src/main/default/objects/Application_wizard__c/fields/Expecting_to_work_part_time__c.field-meta.xml
<CustomField>
    <fullName>Expecting_to_work_part_time__c</fullName>
    <label>Expecting to work part time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>