salesforce-main/src/main/default/objects/Application_wizard__c/fields/Extract_date__c.field-meta.xml
<CustomField>
    <fullName>Extract_date__c</fullName>
    <label>Extract date</label>
    <type>DateTime</type>
</CustomField>