salesforce-main/src/main/default/objects/Application_wizard__c/fields/F1__c.field-meta.xml
<CustomField>
    <fullName>F1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F1</label>
    <type>Checkbox</type>
</CustomField>