salesforce-main/src/main/default/objects/Application_wizard__c/fields/F2__c.field-meta.xml
<CustomField>
    <fullName>F2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F2</label>
    <type>Checkbox</type>
</CustomField>