salesforce-main/src/main/default/objects/Application_wizard__c/fields/F3__c.field-meta.xml
<CustomField>
    <fullName>F3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F3</label>
    <type>Checkbox</type>
</CustomField>