salesforce-main/src/main/default/objects/Application_wizard__c/fields/Father_occupation__c.field-meta.xml
<CustomField>
    <fullName>Father_occupation__c</fullName>
    <label>Father occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>