salesforce-main/src/main/default/objects/Application_wizard__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <description>first (christian) name of the applicant</description>
    <label>Forename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>