salesforce-main/src/main/default/objects/Application_wizard__c/fields/Future_job__c.field-meta.xml
<CustomField>
    <fullName>Future_job__c</fullName>
    <label>Future job</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>