salesforce-main/src/main/default/objects/Application_wizard__c/fields/Have_you_been_refused__c.field-meta.xml
<CustomField>
    <fullName>Have_you_been_refused__c</fullName>
    <label>Have you been refused UK visa before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>