salesforce-main/src/main/default/objects/Application_wizard__c/fields/Hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Hours_per_week__c</fullName>
    <label>Hours per week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>