salesforce-main/src/main/default/objects/Application_wizard__c/fields/How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us__c</fullName>
    <label>How did you hear about us</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Internet Search</fullName>
            </value>
            <value>
                <fullName>In the News</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Via a Professional body</fullName>
            </value>
            <value>
                <fullName>Friend/Family/Colleague</fullName>
            </value>
            <value>
                <fullName>You are a former student (Alumni)</fullName>
            </value>
            <value>
                <fullName>University or School</fullName>
            </value>
            <value>
                <fullName>British Council/Education UK</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>