salesforce-main/src/main/default/objects/Application_wizard__c/fields/How_many_hours_part_time__c.field-meta.xml
<CustomField>
    <fullName>How_many_hours_part_time__c</fullName>
    <label>How many hours part time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>