salesforce-main/src/main/default/objects/Application_wizard__c/fields/intake_month__c.field-meta.xml
<CustomField>
    <fullName>intake_month__c</fullName>
    <label>intake month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>